<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques1"
                android:textSize="25sp"
                android:textStyle="bold"

                />

            <CheckBox
                android:id="@+id/checkbox1id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox1"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <CheckBox
                android:id="@+id/checkbox2id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox2"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <CheckBox
                android:id="@+id/checkbox3id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox3"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/button1id"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:textAllCaps="false"
                android:text="@string/showbutton"
                android:textSize="20sp"
                android:background="@drawable/buttonshape"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/text1id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                />


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques2"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <CheckBox
                android:id="@+id/checkbox4id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox4"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <CheckBox
                android:id="@+id/checkbox5id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox5"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <CheckBox
                android:id="@+id/checkbox6id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox6"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/button2id"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:textAllCaps="false"
                android:text="@string/showbutton"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonshape"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/text2id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques3"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <CheckBox
                android:id="@+id/checkbox7id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox7"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <CheckBox
                android:id="@+id/checkbox8id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox8"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <CheckBox
                android:id="@+id/checkbox9id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox9"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/button3id"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:textAllCaps="false"
                android:background="@drawable/buttonshape"
                android:text="@string/showbutton"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/text3id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        
    </ScrollView>





</LinearLayout>